--- a/views/_detected_page.ejs
+++ b/views/_detected_page.ejs
@@ -2,5 +2,5 @@
   <h4 class="" style="" data-css="tve-u-175e6297851">Seite <%= page %></h4>
 </div>
 <div class="thrv_wrapper thrv_text_element">
-  <p><%= pageContent %></p>
+  <pre><%= pageContent %></pre>
 </div>
