Added preprocessing for not out-of-the-box supported formats.

--- a/views/upload_form.ejs
+++ b/views/upload_form.ejs
@@ -58,7 +58,7 @@
                                      
                                      <div class="thrv_wrapper thrv-button thrv-button-v2 tcb-local-vars-root" data-css="tve-u-17623fcccd7">
                                         <div class="thrive-colors-palette-config"></div>
-                                        <input type="file" name="file" class="tcb-button-link tcb-plain-text" value="Datei vom Gerät wählen" id="file-upload" />
+                                        <input type="file" name="file" class="tcb-button-link tcb-plain-text" accept="image/jpeg,image/png,application/pdf,image/tiff" value="Datei vom Gerät wählen" id="file-upload" />
                                      </div>
                                      
                                      <div class="thrv_wrapper thrv-button thrv-button-v2 tcb-local-vars-root">
