Fixed json api support.

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,19 +1,8 @@
 <html lang="en-US">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title><%= t('title_error') %></title>
     
-    <link rel="stylesheet" id="tve_style_family_tve_flt-css" href="/assets/css/thrive_flat.css" type="text/css" media="all">
-    <link rel="stylesheet" id="thrive-css" href="/assets/css/thrive.min.css" type="text/css" media="all">
-    <link rel="stylesheet" href="/assets/css/tve_style_cust.css" type="text/css" media="all">
-    <link rel="stylesheet" href="/assets/css/style.css" type="text/css" media="all">
-    <link rel="stylesheet" href="/assets/css/nice-select.css">
-
-    <link rel="icon" href="/assets/images/rs-krone-black.png" sizes="32x32">
-    <link rel="icon" href="/assets/images/rs-krone-black.png" sizes="192x192">
-    <link rel="apple-touch-icon" href="/assets/images/rs-krone-black.png">
-    <meta name="msapplication-TileImage" content="/assets/images/rs-krone-black.png">
+    <%- include('_html_header') %>
   </head>
 
   <body class="page-template-default page page-id-337 tve-theme-388 thrive-layout-20 tve-desktop-browser tve-chrome-browser">
