--- a/views/upload_form.ejs
+++ b/views/upload_form.ejs
@@ -1,21 +1,8 @@
 <html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title><%= t('title_upload_form') %></title>
-    <link rel="stylesheet" id="tve_style_family_tve_flt-css" href="/assets/css/thrive_flat.css" type="text/css" media="all">
-    <link rel="stylesheet" id="thrive-css" href="/assets/css/thrive.min.css" type="text/css" media="all">
-    <link rel="stylesheet" href="/assets/css/tve_style_cust.css" type="text/css" media="all">
-    <link rel="stylesheet" href="/assets/css/style.css" type="text/css" media="all">
-    <link rel="stylesheet" href="/assets/css/nice-select.css">
-
-    <link rel="icon" href="/assets/images/rs-krone-black.png" sizes="32x32">
-    <link rel="icon" href="/assets/images/rs-krone-black.png" sizes="192x192">
-    <link rel="apple-touch-icon" href="/assets/images/rs-krone-black.png">
-    <meta name="msapplication-TileImage" content="/assets/images/rs-krone-black.png">
-
-    <script src="/assets/js/jquery.js"></script> 
-    <script src="/assets/js/jquery.nice-select.min.js"></script>
+    
+    <%- include('_html_header') %>
 
     <script>
       $(document).ready(function() {
