Added missing jQuery inclusion

--- a/views/_html_header.ejs
+++ b/views/_html_header.ejs
@@ -12,3 +12,6 @@
 <link rel="icon" href="/assets/images/rs-krone-black.png" sizes="192x192">
 <link rel="apple-touch-icon" href="/assets/images/rs-krone-black.png">
 <meta name="msapplication-TileImage" content="/assets/images/rs-krone-black.png">
+
+<script src="/assets/js/jquery.js"></script>
+<script src="/assets/js/jquery.nice-select.min.js"></script>
